--- a/server/login-custom-filter/src/main/resources/templates/index.html
+++ b/server/login-custom-filter/src/main/resources/templates/index.html
@@ -10,29 +10,31 @@
 
 <div class="container center-contents">
     <div class="row">
-        <h1 class="title display-5"> 메인 페이지 </h1>
+        <h1 class="title display-5"> 학생 / 선생님 메인 페이지 </h1>
     </div>
 
     <div class="links">
 
-        <div class="link" sec:authorize="!isAuthenticated()">
+        <div class="link">
             <a href="/login">  로그인 </a>
         </div>
-
         <div class="link">
-            <a href="/user-page"  sec:authorize="isAuthenticated()">  유저 페이지  </a>
+            <a href="/login-error">  로그인 에러  </a>
         </div>
-
         <div class="link">
-            <a href="/admin-page"  sec:authorize="isAuthenticated()">  관리자 페이지  </a>
+            <a href="/access-denied">  접근에러 </a>
         </div>
-
-        <div class="link"  sec:authorize="isAuthenticated()">
+        <div class="link">
+            <a href="/student/main">  학생 페이지  </a>
+        </div>
+        <div class="link">
+            <a href="/teacher/main">  선생님 페이지 </a>
+        </div>
+        <div class="link">
             <form th:action="@{/logout}" method="post">
-                <button class="btn btn-info" type="submit">로그 아웃</button>
+                <button type="submit">  로그아웃 </button>
             </form>
         </div>
-
     </div>
 </div>
 <script th:src="@{/js/bootstrap.js}" />
